Fix full height page on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,3 @@
-.App {
-  display: flex;
-  justify-content: center;
-  height: 100vh;
-  width: 100vw;
-}
-
 .firstPageContainer {
   background-image: url("assets/htbx_bg.jpg");
   background-size: 500px;
@@ -14,6 +7,7 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
+  height: 100dvh;
   width: 100vw;
 }
 
@@ -29,6 +23,7 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
+  height: 100dvh;
   width: 100vw;
 }
 
@@ -189,7 +184,6 @@
   }
 
   .secondpageContainer {
-    height: 100vh;
     margin-bottom: 10%;
     margin-top: 0%;
   }
